RESOLVED FIXED235413
[fast-cq] [macOS] Various tests hit debug assertions under `SearchBuffer::search` after system ICU changes
https://bugs.webkit.org/show_bug.cgi?id=235413
Summary [fast-cq] [macOS] Various tests hit debug assertions under `SearchBuffer::sea...
Wenson Hsieh
Reported 2022-01-20 11:18:00 PST
Attachments
Patch (2.15 KB, patch)
2022-01-20 11:31 PST, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2022-01-20 11:31:05 PST
Darin Adler
Comment 2 2022-01-20 11:43:12 PST
Comment on attachment 449598 [details] Patch I think it’s likely we have other places where we are checking against U_ZERO_ERROR where we really mean U_SUCCESS.
Wenson Hsieh
Comment 3 2022-01-20 11:58:35 PST
Thanks for the review! (In reply to Darin Adler from comment #2) > Comment on attachment 449598 [details] > Patch > > I think it’s likely we have other places where we are checking against > U_ZERO_ERROR where we really mean U_SUCCESS. Yes — it's certainly possible. I locally only ran a subset of layout tests that use text iterators (`accessibility`, `fast`, and `editing`), and didn't see any other ICU-related crashes/assertions, but did not run the full suite. I think I'll land this change sooner to stop Mac layout tests from exiting early, and then see if there are any more places where we need similar treatment w.r.t. status codes from ICU.
Darin Adler
Comment 4 2022-01-20 13:01:08 PST
(In reply to Wenson Hsieh from comment #3) > I think I'll land this change sooner to stop Mac layout tests from exiting > early, and then see if there are any more places where we need similar > treatment w.r.t. status codes from ICU. Yes, I was talking about future proofing. Completely agree about landing just this. Also, since this change is inside an assertion only, we can rest easy that it only affects debug builds.
EWS
Comment 5 2022-01-20 14:09:36 PST
Found 1 new test failure: imported/w3c/web-platform-tests/html/canvas/element/manual/imagebitmap/createImageBitmap-flipY.html
EWS
Comment 6 2022-01-20 15:10:26 PST
Committed r288327 (246239@main): <https://commits.webkit.org/246239@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 449598 [details].
Note You need to log in before you can comment on or make changes to this bug.