[macOS] Various tests hit debug assertions under `SearchBuffer::search` after system ICU changes https://bugs.webkit.org/show_bug.cgi?id=235413 rdar://87423185

Reviewed by Darin Adler.

After upgrading the system ICU version to ICU 70, many layout tests that attempt to use TextIterator on macOS
(e.g. tests in `accessibility/mac`) hit debug assertions underneath `WebCore::SearchBuffer::search`; this is
because ICU now emits `U_USING_DEFAULT_WARNING` as the error code when calling `usearch_next()`, instead of
`U_ZERO_ERROR`, like it did in previous versions.

This warning is propagated due to ICU falling back to the root locale (`kRootLocaleName`) when creating an
`icu::BreakIterator`, and appears to be benign. We can address this by relaxing the debug assertion in this
method to just check that the error code indicates success (i.e. "warning, or no error"), rather than strictly
being equal to `U_ZERO_ERROR`.

* editing/TextIterator.cpp:
(WebCore::SearchBuffer::search):



Canonical link: https://commits.webkit.org/246239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288327 268f45cc-cd09-0410-ab3c-d52691b4dbfc